--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       - db
     command: >
       sh -c "python manage.py wait_for_db &&
+             python manage.py makemigrations &&          #これ付け足してみた
              python manage.py migrate &&
              python manage.py runserver 0.0.0.0:8000"
 
