--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -25,6 +25,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+    - name: Start Docker Compose
+      run: docker-compose up -d
     - name: Run Tests
       run: |
-        cd .. && cd app && python manage.py test
+        python manage.py test
