--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -29,4 +29,4 @@ jobs:
       run: docker-compose up -d
     - name: Run Tests
       run: |
-        python manage.py test
+        docker-compose exec app sh -c "python manage.py test"
