--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -10,6 +10,9 @@ jobs:
       max-parallel: 4
       matrix:
         python-version: [3.9]
+    
+    env:
+      POSTGRES_HOST: postgres
 
     steps:
     - uses: actions/checkout@v2
@@ -21,8 +24,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        
     - name: Start Docker Compose
       run: docker-compose up -d
+      
     - name: Run Tests
       run: |
         docker-compose exec -T app sh -c "python manage.py test"
