--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -30,4 +30,6 @@ jobs:
       
     - name: Run Tests
       run: |
+        docker-compose run --rm db psql -h db -U postgres
         docker-compose exec -T app sh -c "python manage.py test"
+        
