--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -27,6 +27,6 @@ jobs:
       
     - name: Run Tests
       run: |
-        docker-compose run --rm db psql -h db -U postgres
+        docker-compose run --rm db psql -h 172.18.0.2 -U postgres -d postgres -p 5432
         docker-compose exec -T app sh -c "python manage.py test"
         
